# hipflex

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  release.yml
crates/hipflex/: Cargo.toml
crates/hipflex-fuzz/: Cargo.toml
crates/hipflex-fuzz/src/: lib.rs  simulated_limiter.rs  simulated_pod.rs
crates/hipflex-fuzz/tests/: accounting_invariants.rs  concurrent_stress.rs  edge_cases.rs  multi_process_lifecycle.rs  proc_slots_stress.rs  shm_compat.rs
crates/hipflex-internal/: Cargo.toml
crates/hipflex-internal/src/: hooks.rs  lib.rs  logging.rs  macros.rs
crates/hipflex-internal/src/shared_memory/: handle.rs  mod.rs  proc_slots.rs
crates/hipflex-macro/: Cargo.toml
crates/hipflex-macro/src/: lib.rs
crates/hipflex/src/: config.rs  detour.rs  hipflex.rs  hiplib.rs  kfd.rs  limiter.rs  size_parser.rs
crates/hipflex/src/detour/: mem.rs  smi.rs
docs/: demo.md  design.md  hook-coverage.md
scripts/: run-gpu-tests.sh
tests/gpu-tests/: Dockerfile  Dockerfile.runner  conftest.py  hip_helper.py  shm_writer.py  test_allocation_enforcement.py  test_concurrent.py  test_cu_mask.py  test_device_visibility.py  test_edge_cases.py  test_fft_compatibility.py  test_free_tracking.py  test_info_spoofing.py  test_shm_lifecycle.py  test_smi_spoofing.py  test_standalone_mode.py
